apps/dev/satmonitor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: satmonitor-dev
  labels:
    app.kubernetes.io/part-of: satmonitor
    environment: dev
