apps/dev/satmonitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satmonitor-dev
  namespace: satmonitor-dev
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik

  rules:
    - host: satmonitor.local
      http:
        paths:

          # API → Gateway
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: satmonitor-gateway
                port:
                  number: 8080

          # Frontend
          - path: /app/
            pathType: Prefix
            backend:
              service:
                name: satmonitor-frontend
                port:
                  number: 80
